Fixed chrome grid layout bug.

--- a/client/public/style/style.css
+++ b/client/public/style/style.css
@@ -37,6 +37,7 @@ button
 
 .answer
 {
+    border: 1px solid black;
     font-size: inherit;
     font-family: inherit;
     font-weight: bold;
@@ -82,8 +83,8 @@ button
 #gameContainer
 {
     display: grid;
-    grid-template-columns: 20% 60% 20%;
-    grid-template-rows: 50% 50%;
+    grid-template-columns: 1fr 3fr 1fr;
+    grid-template-rows: 1fr 1fr;
     grid-template-areas: 
         "passedCount exercise failedCount"
         ". buttonContainer .";
